[package]
name = "zinit"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "1.14.0", features = ["full"] }
tokio-stream = { version = "0.1.8", features = ["sync"] }
shlex ="1.1"
nix = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
fern = "0.6"
log = "0.4"
thiserror = "1.0"
clap = "2.33"
git-version = "0.3.5"
command-group = "1.0.8"

[lib]
name = "zinit"
path = "src/lib.rs"

[[bin]]
name = "zinit"
path = "src/main.rs"

[[bin]]
name = "testapp"
path = "src/bin/testapp.rs"
