[workspace]
members = [
    ".",
    "zinit-client"
]

[package]
name = "zinit"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "1.44.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
shlex ="1.1"
nix = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
fern = "0.6"
log = "0.4"
thiserror = "1.0"
clap = "2.33"
git-version = "0.3.5"
command-group = "1.0.8"
hyper = "1.6.0"
axum = { version = "0.7.4", features = ["http1"] }
bytes = "1.0"
jsonrpsee = { version = "0.24.9", features = ["server", "client", "macros"] }
memchr = "2.5.0"
async-trait = "0.1.88"
reth-ipc = { git = "https://github.com/paradigmxyz/reth", package = "reth-ipc" }

[dev-dependencies]
tokio = { version = "1.14.0", features = ["full", "test-util"] }
tempfile = "3.3.0"
[lib]
name = "zinit"
path = "src/lib.rs"

[[bin]]
name = "zinit"
path = "src/main.rs"
# [[bin]]
# name = "testapp"
# path = "src/bin/testapp.rs"
# [[bin]]
# name = "zinit-http"
# path = "src/bin/zinit-http.rs"

