[package]
name = "zinit-client"
version = "0.1.0"
edition = "2021"
description = "A client library for interacting with Zinit process manager"
license = "MIT"
authors = ["ThreeFold Tech, https://github.com/threefoldtech"]

[dependencies]
anyhow = "1.0"
tokio = { version = "1.14.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
log = "0.4"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "http_client"
path = "examples/http_client.rs"
log = "0.4"