[package]
name = "zinit-client"
version = "0.1.0"
edition = "2021"
description = "A client library for interacting with Zinit process manager"
license = "Apache 2.0"
authors = ["ThreeFold Tech, https://github.com/threefoldtech"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1.88"
jsonrpsee = { version = "0.24.9", features = ["server", "client", "macros"] }
reth-ipc = { git = "https://github.com/paradigmxyz/reth", package = "reth-ipc" }
tokio = { version = "1.14.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "http_client"
path = "examples/http_client.rs"
